<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/corner_layout"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_large"
        android:paddingTop="@dimen/margin_small"
        android:paddingRight="@dimen/margin_large"
        android:paddingBottom="@dimen/margin_medium">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Add New Customer"
                android:textAlignment="textStart"
                android:textColor="@color/XanhDuong"
                android:textSize="@dimen/text_size_h1"
                tools:ignore="RtlCompat" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/MauChu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_size_h4"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/customerID" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/customerName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:id="@+id/edtCustomerID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_weight="5"
                    android:background="@drawable/border_edittext_corner"
                    android:hint="Enter customer ID"
                    android:padding="@dimen/spacing_small" />

                <EditText
                    android:id="@+id/edtCustomerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_weight="5"
                    android:background="@drawable/border_edittext_corner"
                    android:hint="Enter customer name"
                    android:padding="@dimen/spacing_small" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/email" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/group" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_weight="5"
                    android:background="@drawable/border_edittext_corner"
                    android:hint="Enter customer email"
                    android:padding="@dimen/spacing_small" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spnGroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_weight="5"
                    android:background="@drawable/spinner_background"
                    android:entries="@array/grouplist"
                    android:padding="@dimen/spacing_small" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/phoneNumber" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/status" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_weight="5"
                    android:background="@drawable/border_edittext_corner"
                    android:hint="Enter customer email"
                    android:padding="@dimen/spacing_small" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spnStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_weight="5"
                    android:background="@drawable/spinner_background"
                    android:entries="@array/statusList"
                    android:padding="@dimen/spacing_small" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note" />

            <EditText
                android:id="@+id/edtNote"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border_edittext_corner"
                android:gravity="top"
                android:inputType="text|textMultiLine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginRight="@dimen/spacing_small"
                android:layout_weight="5"
                android:background="@drawable/corner_button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="Save Customer"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_weight="5"
                android:background="@drawable/corner_button"
                android:backgroundTint="@color/redDark"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="Delete"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>